--- a/packages/business-2.0/page/2.md
+++ b/packages/business-2.0/page/2.md
@@ -1,8 +1,12 @@
+---
+layout: default
+---
+
 # 特性
 
 你只管写业务代码，剩下的我来...
 
 - 🦊 **最佳实践** - 目录规范、代码规范、构建统一
 - 🐒 **开箱即用** - 提供登陆、layout、vuex、router 等业务插件
-- 🎉 **可扩展性** - 提供完善的生命周期，并使其插件化
+- 🎉 **插件化** - 提供完善的生命周期，并使其插件化
 - 📑 **可配置性** - 提供配置文件生成不同的功能
