--- a/packages/business-2.0/page/1.md
+++ b/packages/business-2.0/page/1.md
@@ -1,16 +1,24 @@
----
-layout: two-cols
----
+# 改造背景
 
-# 1.0 缺陷
+<div class="grid grid-cols-2 gap-4">
+
+<div>
+
+## 1.0 缺陷
 
 - 功能组件间过度耦合导致难以维护
 - 传统的组件式开发使得升级及功能扩展复杂
+- **后端**
 
-::right::
+</div>
 
-# 面向未来
+<div>
+
+## 面向未来
 
 - 新技术探索（vite、微前端、vue3）
 - 多技术、多体系、多端
-- 
+
+</div>
+
+</div>
