--- a/packages/deer/page/1.0-vs-2.0.md
+++ b/packages/deer/page/1.0-vs-2.0.md
@@ -1,12 +1,24 @@
-# 1.0
+# 1.0 vs 2.0
+
+<div class="grid grid-cols-2 gap-4">
+
+<div>
+
+## 1.0
 
 - 通过 config.js 启用功能，代码仍存在于项目中
 - webpack 和 ESLint 升级需要业务自行维护
 
-<div class="mt-10"></div>
+</div>
 
-# 2.0
+<div>
+
+## 2.0
 
 - 按需生成功能代码，不会造成过多的代码冗余
 - 提供了插件和中间件供业务封装和扩展功能
 - 内置了目录、代码和打包构建等一系列规范
+
+</div>
+
+</div>
