--- a/packages/deer/page/1.0-vs-2.0.md
+++ b/packages/deer/page/1.0-vs-2.0.md
@@ -1,10 +1,12 @@
-# 1.0 vs 2.0
+# Business 1.0 vs deer
 
 <div class="grid grid-cols-2 gap-4">
 
 <div>
 
-## 1.0
+## Business 1.0
+
+<span></span>
 
 - 通过 config.js 启用功能，代码仍存在于项目中
 - webpack 和 ESLint 升级需要业务自行维护
@@ -13,7 +15,9 @@
 
 <div>
 
-## 2.0
+## deer
+
+<span></span>
 
 - 按需生成功能代码，不会造成过多的代码冗余
 - 提供了插件和中间件供业务封装和扩展功能
